[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polars-tsutils"
version = "0.0.1"
description = "Time-series utilities for Polars: TWA resampling, ZOH interpolation, gap detection, and signal quality checks."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["polars>=1.41.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
